# slushwave-net

./: .gitignore  Notes.md  Notes_BS.md  README.md  USER_AGENTS.txt  album_mod_dates.json  albums.jsonl  albums_260611T1610.json  albums_260611T1834.json  albums_260612T1405.json  albums_260612T1730.json  albums_260612T1734.json  albums_260613T1153.json  albums_260613T1201.json  albums_260613T1204.json  albums_260613T1359.json  albums_260613T1416.json  albums_260614T2339.json  albums_260614T2359.json  albums_260615T0942.json  albums_cache.jsonl  all_slushwave_artists.jsonl  art_ids.jsonl  art_release_date.jsonl  art_release_ids.jsonl  artwork.jsonl  artworks.jsonl  bc-albums-AI.py  bc-scraper copy 2.ipynb  bc-scraper copy.ipynb  bc-scraper.ipynb  bc-slush-albums.ipynb  firefox_profiles.py  good_profiles.json  headers.py  parse_album_page copy.py  parse_album_page.py  parse_music_page.py  pyproject.toml  results_260610T1657.json  (+8 more)
backup/: Notes.md  bandcamp-library-scraper.py  bc-scraper copy.ipynb  bc-scraper.ipynb  bc-slush-albums.ipynb  bc-slush-albums_old.ipynb  bc_scraper_study.ipynb  parse_album_page old.py  webcrawl2_movie details.ipynb  愛と別れの季節 _ 𝓼𝓸𝓾𝓵𝓶𝓪𝓽𝓮 _ soulmate.htm
backup/愛と別れの季節 _ 𝓼𝓸𝓾𝓵𝓶𝓪𝓽𝓮 _ soulmate_files/: 0044606843_102.avif  a2228692973_1x1_200.avif  a2735339882_1x1_200.avif  a3254993492_1x1_200.avif  a326888865_1x1_200.avif  a3303714236_1x1_200.avif  a4043521709_1x1_700.avif  a763733675_1x1_200.avif  a916241875_1x1_200.avif  analytics-9f4449190d790c1ea9bfa7283b90a021.js  anchor.htm  bandmember-b057f14bfb813e509bc1ee643755f183.css  enterprise.js  stripe.js  (+10 more)
