[project]
name = "slushnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.0",
    "async-tls-client>=2.2.0",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "isodate>=0.7.2",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tls-client>=1.0.1",
    "tqdm>=4.67.3",
]
